--- a/phpwebapp/docker-compose.yml
+++ b/phpwebapp/docker-compose.yml
@@ -2,11 +2,11 @@ version: "2"
 services:
      wwwserver:
           build: .
-          image: asn/phpwebapp
+          image: dieaquino/phpwebapp
           environment:
                PORT: 80
           ports:
-               - "8080:80"
+               - "80:80"
           volumes:
                - ./html:/var/www/html
           
